# Winres

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPENDENTS.md  LICENSE  README.md
.changes/: config.json
.github/: dependabot.yml
.github/workflows/: Rust.yml
Source/: helpers.rs  lib.rs
example/: Cargo.toml  build.rs
example/Source/: main.rs
src/: lib.rs
