[dependencies]
embed-resource = "3"
toml = "0.8"

[dev-dependencies]
winapi = { version = "0.3", features = [ "winnt" ] }

[lib]
path = "Source/lib.rs"

[package]
authors = [
  "Tauri Programme within The Commons Conservancy",
  "Max Resch <resch.max@gmail.com>"
]
description = "Create and set windows icons and metadata for executables"
documentation = "https://docs.rs/tauri-winres/"
license-file = "LICENSE"
name = "tauri-winres"
repository = "https://github.com/tauri-apps/winres"
rust-version = "1.65"
version = "0.3.0"
