[build-dependencies]
tauri-winres = { path = ".." }

[dependencies]
winapi = { version = "0.3", features = [ "winuser" ] }

[package]
authors = ["Max Resch <resch.max@gmail.com>"]
build = "build.rs"
description = "Example for winres"
documentation = "https://mxre.github.io/winres"
license-file = "LICENSE"
name = "winres-example"
repository = "https://github.com/mxre/winres"
version = "0.1.3"

[package.metadata]

[package.metadata.tauri-winres]
FileDescription = "Example for \"winres\""
LegalCopyright = "Copyright © 2016-2017"

[[bin]]
name = "app"
path = "Source/main.rs"
